2004-03-28 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b150

	* Bugfix: Closed an unclosed Table Tag.
		  (Caught by Jade)

2004-03-27 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b149

	* Bugfix: Fixed a place where $GALLERY_BASEDIR was used, but undefined.
	  	  (Caught by Christian Mohn)

2004-03-27 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b148

	* Change: Added  possbility to watermark subalbums

	* Change: removed some warnings.

2004-03-25  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b147

	* Added config files that allow the applet behavior to be configured
	  by specifying defaults or overrides for all the Gallery Remote
	  properties.

2004-03-24  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b146

	* Added missing ?> tag at end of some image frame definitions.

2004-03-23 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b145

	* Change:  Check watermarks directory for images add error if none exist.
	  Add check to opendir and add closedir when done checking directory.

2004-03-23  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b144

	* Change:  Correct last "$this =" line in G1 for PHP5 compat.

2004-03-23  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b143

	* Change:  Bump config_version number - config has changed a couple
	  times, (watermark, global comment disable) but this hasn't been 
	  bumped since December.

2004-03-23 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b142

	* Change: Removed Warnings in watermark_album
	  (Catch by Chris Kelly)

	* Bugfix: Added Quotes for an echo, otherwise it were treated as constant.

2004-03-23 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b141

	* Change: Added patch #844762 (\n in Comments are recognized and replaced with <br>

	* Change: Added patch #845075 (URL in admin view is now urldecoded)

2004-03-22 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b140

	* Bugfix: Config. wizard does not check for watermarking binaries:
		pnmcomp(netpbm) and composite(ImageMagick).
	  (Thanks to Vallimar)
