@@ -1,3 +1,9 @@
+2004-03-28  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b151
+
+	* Parse error typo fix in util.php from 1.4.3-cvs-b150
+
+	* Fix in tools/build_manifest.php for broken GALLERY_BASEDIR change
+
 2004-03-28 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b150
 
 	* Bugfix: Closed an unclosed Table Tag.
